--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -48,6 +48,23 @@
 
 
 }
+
+@media (min-width:991px) {
+    .Document-page-section{
+        .news-contain-section{
+            .dropdown{
+                &:hover{
+                    .dropdown-menu{
+                        position: absolute !important;
+                       display: block !important;
+                       margin-top: 3px;
+                    }
+                }
+            }
+        }
+    }
+}
+
 @media (max-width:280px){
     .nvabar-setion{
         .navbar-brand{
