--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -37,11 +37,33 @@ img{
 input:focus{
     outline: none;
 }
+select:focus{
+    outline: none !important;
+    box-shadow: none !important;
+}
 :root{
     --theam-colour:#008DC9;
     --white:#fff;
     --black:#000;
     --light-blue:#009FE2;
+    --dark-blue:#002273;
+    --sky-blue:#F2FBFF;
+    --dark-green:#3ABE21;
+    --gray:#707070 ;
+    --light-gray:#F3F3F3;
+    --orange :#FF6600;
+    --siment:#828282;
+
+
+--unnamed-color-ffb032: #FFB032;
+--unnamed-color-e6f0f1: #E6F0F1;
+--unnamed-color-ff0000: #FF0000;
+--unnamed-color-7a7a7a: #7A7A7A;
+--unnamed-color-ffffff: #FFFFFF;
+--unnamed-color-545454: #545454;
 }
+
+
+
 
 @import "Login";
