--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -51,7 +51,7 @@
 
 @media (min-width:991px) {
     .Document-page-section{
-        .news-contain-section{
+        .Doc-contain-section{
             .dropdown{
                 &:hover{
                     .dropdown-menu{
