--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -30,10 +30,15 @@
   }
 }
 @media (min-width: 991px) {
+  .secondary-menu-section .dropdown-section:hover .dropdown-menu {
+    position: absolute !important;
+    display: block !important;
+    margin-top: 0px;
+  }
   .Document-page-section .Doc-contain-section .dropdown:hover .dropdown-menu {
     position: absolute !important;
     display: block !important;
-    margin-top: 3px;
+    margin-top: 1px;
   }
 }
 @media (max-width: 280px) {
